--- a/Headlines/Base.lproj/Main.storyboard
+++ b/Headlines/Base.lproj/Main.storyboard
@@ -136,7 +136,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="538"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Jj-l4-igw">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="364"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="356"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f25-xF-pOQ">
                                                             <rect key="frame" x="0.0" y="0.0" width="600" height="223"/>
@@ -154,7 +154,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpi-be-wHB">
-                                                            <rect key="frame" x="8" y="335" width="584" height="21"/>
+                                                            <rect key="frame" x="8" y="327" width="584" height="21"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" priority="250" constant="195" id="4Qu-90-vkb"/>
                                                             </constraints>
@@ -172,7 +172,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yoF-Zm-wWb">
-                                                            <rect key="frame" x="8" y="298" width="584" height="21"/>
+                                                            <rect key="frame" x="8" y="290" width="584" height="21"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="21" id="P1Q-GJ-zCu"/>
                                                             </constraints>
@@ -189,7 +189,7 @@
                                                         <constraint firstItem="yoF-Zm-wWb" firstAttribute="leading" secondItem="5Jj-l4-igw" secondAttribute="leading" constant="8" id="5t7-rV-tMD"/>
                                                         <constraint firstAttribute="trailing" secondItem="jpi-be-wHB" secondAttribute="trailing" constant="8" id="63I-UA-J4M"/>
                                                         <constraint firstItem="jpi-be-wHB" firstAttribute="leading" secondItem="5Jj-l4-igw" secondAttribute="leading" constant="8" id="8DY-7u-ADs"/>
-                                                        <constraint firstItem="yoF-Zm-wWb" firstAttribute="top" secondItem="3v7-xM-bgG" secondAttribute="bottom" constant="8" id="Ajc-I2-1Qx"/>
+                                                        <constraint firstItem="yoF-Zm-wWb" firstAttribute="top" secondItem="3v7-xM-bgG" secondAttribute="bottom" id="Ajc-I2-1Qx"/>
                                                         <constraint firstAttribute="trailing" secondItem="f25-xF-pOQ" secondAttribute="trailing" id="BeN-Qn-AkY"/>
                                                         <constraint firstItem="3v7-xM-bgG" firstAttribute="top" secondItem="eJY-Ji-2kj" secondAttribute="bottom" constant="8" id="ERN-P0-V1C"/>
                                                         <constraint firstAttribute="trailing" secondItem="eJY-Ji-2kj" secondAttribute="trailing" constant="8" id="T36-rm-5iS"/>
