--- a/Headlines/Base.lproj/Main.storyboard
+++ b/Headlines/Base.lproj/Main.storyboard
@@ -86,6 +86,10 @@
                             <outlet property="delegate" destination="cd6-wm-2fP" id="zYZ-ad-TQe"/>
                         </connections>
                     </tableView>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="TIC-yk-6TQ"/>
+                        <barButtonItem image="guardianLogo" id="9lb-gq-JCN"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" id="V9b-Kp-Ahd">
                         <nil key="title"/>
                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="hOt-jf-EKo">
@@ -100,6 +104,7 @@
                             </connections>
                         </segmentedControl>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="dr8-ES-UxF">
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
