add check on adding favs

--- a/Headlines/Base.lproj/Main.storyboard
+++ b/Headlines/Base.lproj/Main.storyboard
@@ -123,6 +123,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="7UH-Sa-oqp">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="35Z-qx-QZG">
                             <size key="itemSize" width="600" height="538"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
